# sgbust

./: .gitattributes  .gitignore  BlocCpp.sln  CMakeLists.txt  LICENSE  README.md  build.sh  sgbust.sln  sgbust.slnx  sgbust.vcxproj  sgbust.vcxproj.filters  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
BlocCpp/: BlocCpp.vcxproj  BlocCpp.vcxproj.filters  BlocSolver.cpp  BlocSolver.h  BlockGrid.cpp  BlockGrid.h  CMakeLists.txt  CompactBlockGrid.cpp  CompactBlockGrid.h  CompactBlockgrid.h  MemoryUsage.cpp  MemoryUsage.h  Polynom.cpp  Polynom.h  Scoring.cpp  Scoring.h  build.sh  main.cpp  wyhash.h  xxh3.h  xxhash.c  xxhash.h
BlocCpp/bloc/: CompactGrid.cpp  CompactGrid.h  Grid.cpp  Grid.h  MemoryUsage.cpp  MemoryUsage.h  Scoring.cpp  Scoring.h  Solver.cpp  Solver.h
grids/: 1.bgf  2.bgf  boop.bgf  box.bgf  chess.bgf  clickomania.bgf  deep.bgf  fast.bgf  feez.bgf  fine.bgf  fruuc.bgf  funwin1.bgf  grid.bgf  huge.bgf  imposible.bgf  largy.bgf  maxi.bgf  mill.bgf  mini.bgf  noway.bgf  nu.bgf  online.bgf  pattern.bgf  ppp.bgf  puzzle.bgf  quad.bgf  rear.bgf  slift.bgf  small.bgf  star.bgf  surge1.bgf  test.bgf  triples.bgf  tunell.bgf  wikipedia.bgf
grids/janko/16x10/: 0.bgf  1.bgf  10.bgf  11.bgf  12.bgf  13.bgf  14.bgf  15.bgf  16.bgf  17.bgf  18.bgf  19.bgf  2.bgf  20.bgf  21.bgf  22.bgf  23.bgf  24.bgf  25.bgf  27.bgf  29.bgf  3.bgf  4.bgf  5.bgf  6.bgf  7.bgf  8.bgf  9.bgf
grids/jsgames/: jsgames1.bgf  jsgames10.bgf  jsgames11.bgf  jsgames12.bgf  jsgames13.bgf  jsgames14.bgf  jsgames15.bgf  jsgames16.bgf  jsgames17.bgf  jsgames18.bgf  jsgames19.bgf  jsgames2.bgf  jsgames20.bgf  jsgames3.bgf  jsgames4.bgf  jsgames5.bgf  jsgames6.bgf  jsgames7.bgf  jsgames8.bgf  jsgames9.bgf
include/cli/: commands.h  parser.h
include/core/: CompactGrid.h  Grid.h  MemoryUsage.h  Polynom.h  Scoring.h  Solution.h  Solver.h
sgbust/: main.cpp  sgbust.vcxproj  sgbust.vcxproj.filters  utils.cpp  utils.h
sgbust/cli/: commands.cpp  commands.h  parser.cpp  parser.h  utils.cpp
sgbust/core/: CompactGrid.cpp  CompactGrid.h  Grid.cpp  Grid.h  MemoryUsage.cpp  MemoryUsage.h  Scoring.cpp  Scoring.h  Solver.cpp  Solver.h
sgbust/sgbust/: CompactGrid.cpp  CompactGrid.h  Grid.cpp  Grid.h  MemoryUsage.cpp  Scoring.cpp  Scoring.h  Solver.cpp  Solver.h
src/: main.cpp
src/cli/: commands.cpp  parser.cpp  utils.cpp
src/core/: CompactGrid.cpp  Grid.cpp  MemoryUsage.cpp  Polynom.cpp  Scoring.cpp  Solution.cpp  Solver.cpp
(+358 files in other folders)
